--- a/src/com/dscalzi/skychanger/resources/config.yml
+++ b/src/com/dscalzi/skychanger/resources/config.yml
@@ -2,15 +2,23 @@
 #               Sky Changer Config
 #-----------------------------------------------
 
-#DO NOT CHANGE THIS VALUE.
-#CHANGING IT COULD RESULT IN DATA LOSS.
+# DO NOT CHANGE THIS VALUE.
+# CHANGING IT COULD RESULT IN DATA LOSS.
 ConfigVersion: 1.0
 
 #--------------[General Settings]---------------
 general_settings:
 
-  #Upper packet limit.
+  # Upper packet limit.
   upper_limit: 50
   
-  #Lower packet limit.
+  # Lower packet limit.
   lower_limit: -50
+
+  # Opt out of metrics collection by https://bstats.org/
+  # Note that if opting out you must fully restart
+  # your server for the changes to take effect. If opting
+  # back in you may simply run /SkyChanger reload.
+  #
+  # Please consider keeping this value false :)
+  metrics_opt_out: false
