--- a/src/com/dscalzi/skychanger/resources/plugin.yml
+++ b/src/com/dscalzi/skychanger/resources/plugin.yml
@@ -2,7 +2,7 @@ author: Daniel Scalzi
 description: Spigot plugin to change the color of the sky in your Minecraft world.
 main: com.dscalzi.skychanger.SkyChanger
 name: SkyChanger
-version: 1.0
+version: 1.1
 commands:
   skychanger:
     description: Main plugin command
@@ -14,5 +14,10 @@ permissions:
           skychanger.changesky.self: true
           skychanger.changesky.others: true
           skychanger.changesky.all: true
+      skychanger.freeze.*:
+        children:
+          skychanger.freeze.self: true
+          skychanger.freeze.others: true
+          skychanger.freeze.all: true
       skychanger.bypasslimit: true
       skychanger.reload: true
