Added multilanguage support.
Current supported languages are en_US, it_IT, and de_DE.
Hoping to get at least two more before release.

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/com/dscalzi/skychanger/lang/Messages_de_DE.properties=UTF-8
+encoding//src/com/dscalzi/skychanger/lang/Messages_it_IT.properties=UTF-8
 encoding/README.md=UTF-8
