New metric table, added Dutch language (Nederlands)

--- a/src/com/dscalzi/skychanger/resources/config.yml
+++ b/src/com/dscalzi/skychanger/resources/config.yml
@@ -19,8 +19,10 @@ general_settings:
   
   # Choose the language of this plugin. The value must be supported
   # and follow the format "language_COUNTRY". For example en_US.
+  # Submit Translations: https://bitbucket.org/AventiumSoftworks/skychanger/issues
   # Supported languages:
   # - en_US (English, United States)
   # - it_IT (Italiano, Italia)
   # - de_DE (Deutsche, Deutschland)
+  # - nl_NL (Nederlands, Nederland)
   language: en_US
