Updating version to 1.2, added Spanish localization (Ecuador).

--- a/src/com/dscalzi/skychanger/resources/config.yml
+++ b/src/com/dscalzi/skychanger/resources/config.yml
@@ -25,4 +25,5 @@ general_settings:
   # - it_IT (Italiano, Italia)
   # - de_DE (Deutsche, Deutschland)
   # - nl_NL (Nederlands, Nederland)
+  # - es_EC (Español, Ecuador)
   language: en_US
