Added language (Spanish, Argentina).

--- a/src/com/dscalzi/skychanger/resources/config.yml
+++ b/src/com/dscalzi/skychanger/resources/config.yml
@@ -26,4 +26,5 @@ general_settings:
   # - de_DE (Deutsche, Deutschland)
   # - nl_NL (Nederlands, Nederland)
   # - es_EC (Español, Ecuador)
+  # - es_AR (Español, Argentina)
   language: en_US
