--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.dscalzi</groupId>
   <artifactId>SkyChanger</artifactId>
-  <version>1.2.2</version>
+  <version>1.3.0</version>
   <name>SkyChanger</name>
-  <description>Change the color of your personal sky</description>
+  <description>Change the color of your personal sky.</description>
+  
+  <properties>
+  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   
   <developers>
   	<developer>
