--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ author: Daniel Scalzi
 description: Spigot plugin to change the color of the sky in your Minecraft world.
 main: com.dscalzi.skychanger.SkyChanger
 name: SkyChanger
-version: 1.2.2
+version: 1.3.0
 commands:
   skychanger:
     description: Main plugin command
@@ -13,11 +13,13 @@ permissions:
         children:
           skychanger.changesky.self: true
           skychanger.changesky.others: true
+          skychanger.changesky.world.*: true
           skychanger.changesky.all: true
       skychanger.freeze.*:
         children:
           skychanger.freeze.self: true
           skychanger.freeze.others: true
+          skychanger.freeze.world.*: true
           skychanger.freeze.all: true
       skychanger.bypasslimit: true
       skychanger.reload: true
