--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.dscalzi</groupId>
   <artifactId>SkyChanger</artifactId>
-  <version>1.3.5</version>
+  <version>1.4.0</version>
   <name>SkyChanger</name>
   <description>Change the color of your personal sky.</description>
   
@@ -18,6 +18,13 @@
          </roles>
       </developer>
   </developers>
+  
+  <licenses>
+    <license>
+	    <name>MIT License</name>
+	    <url>http://www.opensource.org/licenses/mit-license.php</url>
+    </license>
+  </licenses>
   
   <build>
  	<defaultGoal>package</defaultGoal>
@@ -38,6 +45,32 @@
       </plugin>
       
       <plugin>
+	    <groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-source-plugin</artifactId>
+		<executions>
+		  <execution>
+		    <id>attach-sources</id>
+		    <goals>
+		      <goal>jar</goal>
+		    </goals>
+		  </execution>
+		</executions>
+	  </plugin>
+	  
+	  <plugin>
+	    <groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-javadoc-plugin</artifactId>
+		<executions>
+		  <execution>
+		    <id>attach-javadocs</id>
+		    <goals>
+		      <goal>jar</goal>
+		    </goals>
+		  </execution>
+		</executions>
+	  </plugin>
+      
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
         <version>2.4.3</version>
@@ -49,7 +82,7 @@
             </goals>
             <configuration>
               <minimizeJar>true</minimizeJar>
-              <finalName>SkyChanger</finalName>
+              <finalName>SkyChanger-withDependencies</finalName>
               <relocations>
               	<relocation>
               		<pattern>org.bstats</pattern>
@@ -70,6 +103,14 @@
       </plugin>
     </plugins>
   </build>
+  
+  <distributionManagement>
+    <repository>
+        <id>bintray-dscalzi-maven</id>
+        <name>dscalzi-maven</name>
+        <url>https://api.bintray.com/maven/dscalzi/maven/SkyChanger/;publish=1</url>
+    </repository>
+  </distributionManagement>
   
   <repositories>
 	<repository>
@@ -95,4 +136,10 @@
   		<version>1.2</version>
 	</dependency>
   </dependencies>
+  
+  <scm>
+    <connection>scm:git:git://bitbucket.org/AventiumSoftworks/skychanger.git</connection>
+    <developerConnection>scm:git:ssh://bitbucket.org:AventiumSoftworks/skychanger.git</developerConnection>
+    <url>https://bitbucket.org/AventiumSoftworks/skychanger/src</url>
+  </scm>
 </project>
