--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.dscalzi</groupId>
   <artifactId>SkyChanger</artifactId>
-  <version>1.4.0</version>
+  <version>1.4.1</version>
   <name>SkyChanger</name>
   <description>Change the color of your personal sky.</description>
   
@@ -82,7 +82,7 @@
             </goals>
             <configuration>
               <minimizeJar>true</minimizeJar>
-              <finalName>SkyChanger-withDependencies</finalName>
+              <finalName>SkyChanger-${version}</finalName>
               <relocations>
               	<relocation>
               		<pattern>org.bstats</pattern>
@@ -138,8 +138,8 @@
   </dependencies>
   
   <scm>
-    <connection>scm:git:git://bitbucket.org/AventiumSoftworks/skychanger.git</connection>
-    <developerConnection>scm:git:ssh://bitbucket.org:AventiumSoftworks/skychanger.git</developerConnection>
-    <url>https://bitbucket.org/AventiumSoftworks/skychanger/src</url>
+    <connection>scm:git:git://github.com/dscalzi/SkyChanger.git</connection>
+    <developerConnection>scm:git:ssh://github.com:dscalzi/SkyChanger.git</developerConnection>
+    <url>https://github.com/dscalzi/SkyChanger</url>
   </scm>
 </project>
