Updating maven plugins to latest versions.

--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
   <version>1.4.1</version>
   <name>SkyChanger</name>
   <description>Change the color of your personal sky.</description>
+  <url>https://github.com/dscalzi/SkyChanger</url>
   
   <properties>
   	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -36,8 +37,9 @@
     </resources>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
+        <version>3.7.0</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
@@ -47,6 +49,7 @@
       <plugin>
 	    <groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-source-plugin</artifactId>
+		<version>3.0.1</version>
 		<executions>
 		  <execution>
 		    <id>attach-sources</id>
@@ -60,6 +63,7 @@
 	  <plugin>
 	    <groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-javadoc-plugin</artifactId>
+		<version>3.0.0</version>
 		<executions>
 		  <execution>
 		    <id>attach-javadocs</id>
@@ -73,7 +77,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>2.4.3</version>
+        <version>3.1.0</version>
         <executions>
           <execution>
             <phase>package</phase>
