--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -30,4 +30,5 @@ general_settings:
   # - no_NO (Norsk, Norge)
   # - iw_IL (ישראל, עברית)
   # - hu_HU (Magyar, Magyarország)
+  # - zh_CN (简体中文, 中国)
   language: en_US
