Disable 1.13 compatibility layer.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,8 @@ author: Daniel Scalzi
 description: Spigot plugin to change the color of the sky in your Minecraft world.
 main: com.dscalzi.skychanger.SkyChangerPlugin
 name: SkyChanger
-version: 1.4.2
+version: 1.4.3
+api-version: 1.13
 commands:
   skychanger:
     description: Main plugin command
