--- a/SkyChangerBukkit/build.gradle
+++ b/SkyChangerBukkit/build.gradle
@@ -6,6 +6,12 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.bstats', name: 'bstats-bukkit', version:'1.2'
-    compileOnly group: 'org.spigotmc', name: 'spigot-api', version:'1.12.2-R0.1-SNAPSHOT'
+    compile 'org.bstats:bstats-bukkit:1.2'
+    compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
+}
+
+shadowJar {
+    classifier 'dist'
+
+    relocate 'org.bstats', 'com.dscalzi.skychanger.bukkit.lib.org.bstats'
 }
