--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id 'com.github.johnrengelman.shadow' version '2.0.4'
+    id 'com.jfrog.bintray' version '1.8.4'
 }
 
 allprojects {
     group = 'com.dscalzi'
-    version = '1.4.3'
 }
 
 description = """Change the color of your personal sky."""
@@ -15,10 +15,19 @@ subprojects {
 
     apply plugin: 'java'
     apply plugin: 'maven'
+    apply plugin: 'maven-publish'
     apply plugin: 'com.github.johnrengelman.shadow'
+    apply plugin: 'com.jfrog.bintray'
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
+
+    def major = '2'
+    def minor = '0'
+    def spongeRevision = '0'
+    def bukkitRevision = '0'
+
+    version = "${major}.${minor}.${project.name.endsWith('Sponge') ? spongeRevision : bukkitRevision}"
     
     tasks.withType(JavaCompile) {
         options.encoding = 'UTF-8'
@@ -28,6 +37,25 @@ subprojects {
         testImplementation.extendsFrom compileOnly
     }
     
+    task sourcesJar(type: Jar, dependsOn: classes) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
+
+    task javadocJar(type: Jar, dependsOn: javadoc) {
+        classifier = 'javadoc'
+        from javadoc.destinationDir
+    }
+
+    javadoc {
+        options.encoding = 'UTF-8'
+    }
+
+    artifacts {
+        archives sourcesJar
+        archives javadocJar
+    }
+
     jar {
         baseName = project.name
         manifest {
@@ -41,6 +69,41 @@ subprojects {
 
         jar.mustRunAfter clean
         shadowJar.mustRunAfter jar
+    }
+
+    bintrayUpload {
+        dependsOn build
+    }
+
+    bintray {
+        user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
+        key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+        publications = ["BintrayRelease"]
+        pkg {
+            repo = 'maven'
+            name = project.name
+            licenses = ['MIT']
+            vcsUrl = 'https://github.com/dscalzi/SkyChanger.git'
+            publish = true
+            version {
+                name = version
+                released = new Date()
+                vcsTag = 'v' + version
+            }
+        }
+    }
+
+    publishing {
+        publications {
+            BintrayRelease(MavenPublication) {
+                from components.java
+                groupId group
+                artifactId archivesBaseName
+                version version
+                artifact javadocJar
+                artifact sourcesJar
+            }
+        }
     }
     
 }
