--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'net.minecrell.licenser' version '0.4.1'
     id 'com.github.johnrengelman.shadow' version '2.0.4'
     id 'com.jfrog.bintray' version '1.8.4'
 }
@@ -18,6 +19,7 @@ subprojects {
     apply plugin: 'maven-publish'
     apply plugin: 'com.github.johnrengelman.shadow'
     apply plugin: 'com.jfrog.bintray'
+    apply plugin: 'net.minecrell.licenser'
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
@@ -35,6 +37,16 @@ subprojects {
     
     configurations {
         testImplementation.extendsFrom compileOnly
+    }
+
+    license {
+        sourceSets = [project.sourceSets.main]
+        header = rootProject.file('HEADER.txt')
+        ext {
+            name = 'Daniel D. Scalzi'
+            year = '2017-2018'
+            url = 'https://github.com/dscalzi/SkyChanger'
+        }
     }
     
     task sourcesJar(type: Jar, dependsOn: classes) {
