Move language files to root project.

--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,8 @@ subprojects {
 
     jar {
         baseName = project.name
+        from(rootProject.projectDir.toString() + '/resources')
+
         manifest {
             attributes 'Implementation-Version': version, 'Specification-Version': version
         }
