--- a/SkyChanger-Bukkit/build.gradle
+++ b/SkyChanger-Bukkit/build.gradle
@@ -1,13 +1,13 @@
 repositories {
     mavenCentral()
-    maven { url "https://hub.spigotmc.org/nexus/content/repositories/snapshots/" }
-    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
-    maven { url "http://repo.bstats.org/content/repositories/releases/" }
+    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+    maven { url 'https://repo.codemc.org/repository/maven-public' }
 }
 
 dependencies {
-    compile 'org.bstats:bstats-bukkit:1.2'
-    compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
+    compile 'org.bstats:bstats-bukkit:1.4'
+    compileOnly 'org.spigotmc:spigot-api:1.13.2-R0.1-SNAPSHOT'
 }
 
 shadowJar {
