--- a/SkyChanger-Bukkit/build.gradle
+++ b/SkyChanger-Bukkit/build.gradle
@@ -47,6 +47,7 @@ bukkit {
             children = [
                 'skychanger.changesky.self',
                 'skychanger.changesky.others',
+                'skychanger.changesky.radius.*',
                 'skychanger.changesky.world.*',
                 'skychanger.changesky.all'
             ]
@@ -57,6 +58,10 @@ bukkit {
         }
         'skychanger.changesky.others' {
             description = 'Access to change the sky color for a specific player.'
+            setDefault('OP')
+        }
+        'skychanger.changesky.radius.*' {
+            description = 'Access to change the sky color for players within a radius.'
             setDefault('OP')
         }
         'skychanger.changesky.world.*' {
@@ -72,6 +77,7 @@ bukkit {
             children = [
                 'skychanger.freeze.self',
                 'skychanger.freeze.others',
+                'skychanger.freeze.radius.*',
                 'skychanger.freeze.world.*',
                 'skychanger.freeze.all'
             ]
@@ -82,6 +88,10 @@ bukkit {
         }
         'skychanger.freeze.others' {
             description = 'Access to freeze/unfreeze a specific person.'
+            setDefault('OP')
+        }
+        'skychanger.freeze.radius.*' {
+            description = 'Access to freeze/unfreeze a players within a radius.'
             setDefault('OP')
         }
         'skychanger.freeze.world.*' {
