--- a/SkyChanger-Bukkit/src/main/resources/config.yml
+++ b/SkyChanger-Bukkit/src/main/resources/config.yml
@@ -30,4 +30,5 @@ general_settings:
   # - iw_IL (ישראל, עברית)
   # - hu_HU (Magyar, Magyarország)
   # - zh_CN (简体中文, 中国)
+  # - ja_JP (日本語,  日本)
   language: en_US
