Move core functionality to core module.

--- a/SkyChanger-Sponge/build.gradle
+++ b/SkyChanger-Sponge/build.gradle
@@ -36,8 +36,10 @@ repositories {
 }
 
 dependencies {
-    compile 'org.bstats:bstats-sponge:1.5'
     compileOnly 'org.spongepowered:spongeapi:7.1.0'
+
+    implementation project(':SkyChanger-Core')
+    implementation 'org.bstats:bstats-sponge:1.5'
 }
 
 shadowJar {
