--- a/SkyChanger-Bukkit/build.gradle
+++ b/SkyChanger-Bukkit/build.gradle
@@ -10,8 +10,10 @@ repositories {
 }
 
 dependencies {
-    compile 'org.bstats:bstats-bukkit:1.5'
     compileOnly 'org.spigotmc:spigot-api:1.14.4-R0.1-SNAPSHOT'
+
+    implementation project(':SkyChanger-Core')
+    implementation 'org.bstats:bstats-bukkit:1.5'
 }
 
 bukkit {
