--- a/SkyChanger-Bukkit/src/main/resources/config.yml
+++ b/SkyChanger-Bukkit/src/main/resources/config.yml
@@ -31,4 +31,5 @@ general_settings:
   # - hu_HU (Magyar, Magyarország)
   # - zh_CN (简体中文, 中国)
   # - ja_JP (日本語,  日本)
+  # - fr_FR (Français, France)
   language: en_US
