--- a/SkyChanger-Sponge/src/main/resources/assets/skychanger/skychanger.conf
+++ b/SkyChanger-Sponge/src/main/resources/assets/skychanger/skychanger.conf
@@ -32,6 +32,7 @@ general_settings {
 	# - hu_HU (Magyar, Magyarország)
 	# - zh_CN (简体中文, 中国)
 	# - ja_JP (日本語,  日本)
+	# - fr_FR (Français, France)
 	language: en_US
 	
 }
