Fix scope of core project for third party integration.

--- a/SkyChanger-Bukkit/build.gradle
+++ b/SkyChanger-Bukkit/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'net.minecrell.plugin-yml.bukkit' version '0.3.0'
+    id 'java-library'
 }
 
 repositories {
@@ -12,7 +13,7 @@ repositories {
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.15.2-R0.1-SNAPSHOT'
 
-    implementation project(':SkyChanger-Core')
+    api project(':SkyChanger-Core')
     implementation 'org.bstats:bstats-bukkit:1.7'
 }
 
