--- a/SkyChanger-Sponge/build.gradle
+++ b/SkyChanger-Sponge/build.gradle
@@ -11,6 +11,7 @@ buildscript {
 plugins {
     id 'org.spongepowered.plugin' version '0.9.0'
     id 'net.minecrell.vanillagradle.server' version '2.2-6'
+    id 'java-library'
 }
 
 minecraft {
@@ -38,7 +39,7 @@ repositories {
 dependencies {
     compileOnly 'org.spongepowered:spongeapi:7.1.0'
 
-    implementation project(':SkyChanger-Core')
+    api project(':SkyChanger-Core')
     implementation 'org.bstats:bstats-sponge:1.7'
 }
 
