--- a/SkyChanger-Sponge/build.gradle
+++ b/SkyChanger-Sponge/build.gradle
@@ -37,13 +37,16 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'org.spongepowered:spongeapi:7.1.0'
+    compileOnly 'org.spongepowered:spongeapi:7.3.0'
 
     api project(':SkyChanger-Core')
-    implementation 'org.bstats:bstats-sponge:1.7'
+    implementation 'org.bstats:bstats-sponge:2.2.1'
 }
 
 shadowJar {
+
+    relocate 'org.bstats', 'com.dscalzi.skychanger.sponge.lib.org.bstats'
+
     mainSpec.sourcePaths.clear()
     dependsOn reobfJar
 
