--- a/SkyChanger-Sponge/build.gradle
+++ b/SkyChanger-Sponge/build.gradle
@@ -1,33 +1,34 @@
-buildscript {
-    repositories {
-        maven { url = 'https://files.minecraftforge.net/maven' }
-    }
-
-    dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
-    }
-}
+import org.spongepowered.gradle.plugin.config.PluginLoaders
+import org.spongepowered.gradle.vanilla.repository.MinecraftPlatform
 
 plugins {
-    id 'org.spongepowered.plugin' version '0.9.0'
-    id 'net.minecrell.vanillagradle.server' version '2.2-6'
+    id 'org.spongepowered.gradle.plugin' version '1.1.1'
+    id 'org.spongepowered.gradle.vanilla' version '0.2'
     id 'java-library'
 }
 
 minecraft {
-    version = '1.12.2'
-    mappings = 'stable_39'
+    version ('1.16.5')
+    runs {
+        platform(MinecraftPlatform.SERVER)
+    }
 }
 
 sponge {
-    plugin {
-        meta {
-            id = 'skychanger'
-            name = project.ext.name
-            version = version
-            description = description
-            url = project.ext.url
-            authors = [project.ext.author]
+    apiVersion('8.0.0')
+    plugin('skychanger') {
+        mainClass('com.dscalzi.skychanger.sponge.SkyChangerPlugin')
+        loader(PluginLoaders.JAVA_PLAIN)
+        displayName(project.ext.name)
+        version(project.version)
+        description(project.description)
+        links {
+            homepage(project.ext.url)
+            source(project.ext.url)
+            issues("${project.ext.url}/issues")
+        }
+        contributor(project.ext.author) {
+            description('Lead Developer')
         }
     }
 }
@@ -37,24 +38,11 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'org.spongepowered:spongeapi:7.3.0'
-
     api project(':SkyChanger-Core')
     implementation 'org.bstats:bstats-sponge:2.2.1'
 }
 
 shadowJar {
-
     relocate 'org.bstats', 'com.dscalzi.skychanger.sponge.lib.org.bstats'
-
-    mainSpec.sourcePaths.clear()
-    dependsOn reobfJar
-
     classifier 'dist'
-
-    exclude 'dummyThing'
-	afterEvaluate {
-        from zipTree(reobfJar.jar)
-    }
-    
 }
