--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,11 @@
 plugins {
-    id 'net.minecrell.licenser' version '0.4.1'
-    id 'com.github.johnrengelman.shadow' version '4.0.1'
-    id 'com.jfrog.bintray' version '1.8.5'
+    id 'org.cadixdev.licenser' version '0.6.0'
+    id 'com.github.johnrengelman.shadow' version '7.0.0'
+}
+
+wrapper {
+    gradleVersion = '7.0.2'
+    distributionType = Wrapper.DistributionType.BIN
 }
 
 allprojects {
@@ -18,19 +22,17 @@ allprojects {
 subprojects {
 
     apply plugin: 'java'
-    apply plugin: 'maven'
-    apply plugin: 'maven-publish'
+    apply plugin: 'java-library'
     apply plugin: 'com.github.johnrengelman.shadow'
-    apply plugin: 'com.jfrog.bintray'
-    apply plugin: 'net.minecrell.licenser'
+    apply plugin: 'org.cadixdev.licenser'
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    sourceCompatibility = JavaVersion.VERSION_16
+    targetCompatibility = JavaVersion.VERSION_16
 
-    def major = '4'
+    def major = '5'
     def minor = '0'
-    def spongeRevision = '2'
-    def bukkitRevision = '2'
+    def spongeRevision = '0'
+    def bukkitRevision = '0'
 
     def rev
 
@@ -57,40 +59,29 @@ subprojects {
     }
 
     license {
-        sourceSets = [project.sourceSets.main]
         exclude '**/config.yml'
         header = rootProject.file('HEADER.txt')
-        ext {
+        properties {
             name = 'Daniel D. Scalzi'
             year = '2017-2021'
             url = 'https://github.com/dscalzi/SkyChanger'
         }
     }
-    
-    task sourcesJar(type: Jar, dependsOn: classes) {
-        classifier = 'sources'
-        from sourceSets.main.allSource
-    }
 
-    task javadocJar(type: Jar, dependsOn: javadoc) {
-        classifier = 'javadoc'
-        from javadoc.destinationDir
+    java {
+        withSourcesJar()
+        withJavadocJar()
     }
 
     javadoc {
         options.encoding = 'UTF-8'
     }
 
-    artifacts {
-        archives sourcesJar
-        archives javadocJar
-    }
-
     jar {
-        baseName = project.name
+        archiveBaseName.set(project.name)
 
         manifest {
-            attributes 'Implementation-Version': version, 'Specification-Version': version
+            attributes 'Implementation-Version': archiveVersion, 'Specification-Version': archiveVersion
         }
     }
 
@@ -100,41 +91,6 @@ subprojects {
 
         jar.mustRunAfter clean
         shadowJar.mustRunAfter jar
-    }
-
-    bintrayUpload {
-        dependsOn build
-    }
-
-    bintray {
-        user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
-        key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
-        publications = ["BintrayRelease"]
-        pkg {
-            repo = 'maven'
-            name = project.name
-            licenses = ['MIT']
-            vcsUrl = 'https://github.com/dscalzi/SkyChanger.git'
-            publish = true
-            version {
-                name = project.version
-                released = new Date()
-                vcsTag = 'v' + project.version
-            }
-        }
-    }
-
-    publishing {
-        publications {
-            BintrayRelease(MavenPublication) {
-                from components.java
-                groupId group
-                artifactId archivesBaseName
-                version version
-                artifact javadocJar
-                artifact sourcesJar
-            }
-        }
     }
     
 }
