Use only lowercase in module names.

--- a/build.gradle
+++ b/build.gradle
@@ -37,9 +37,9 @@ subprojects {
 
     def rev
 
-    if (project.name.endsWith('Sponge')) {
+    if (project.name.endsWith('sponge')) {
         rev = spongeRevision
-    } else if (project.name.endsWith('Bukkit')) {
+    } else if (project.name.endsWith('bukkit')) {
         rev = bukkitRevision
     } else {
         rev = spongeRevision.toInteger() > bukkitRevision.toInteger() ? spongeRevision : bukkitRevision
