--- a/skychanger-sponge/build.gradle
+++ b/skychanger-sponge/build.gradle
@@ -1,9 +1,9 @@
 import org.spongepowered.gradle.plugin.config.PluginLoaders
 import org.spongepowered.gradle.vanilla.repository.MinecraftPlatform
-import org.spongepowered.plugin.metadata.PluginDependency
+import org.spongepowered.plugin.metadata.model.PluginDependency
 
 plugins {
-    id 'org.spongepowered.gradle.plugin' version '1.1.1'
+    id 'org.spongepowered.gradle.plugin' version '2.0.2'
     id 'org.spongepowered.gradle.vanilla' version '0.2'
     id 'java-library'
 }
@@ -17,11 +17,15 @@ minecraft {
 
 sponge {
     apiVersion('8.0.0')
+    license('MIT')
+    loader {
+        name(PluginLoaders.JAVA_PLAIN)
+        version('1.0')
+    }
     plugin('skychanger') {
-        mainClass('com.dscalzi.skychanger.sponge.SkyChangerPlugin')
-        loader(PluginLoaders.JAVA_PLAIN)
         displayName(project.ext.name)
         version(project.version)
+        entrypoint('com.dscalzi.skychanger.sponge.SkyChangerPlugin')
         description(project.description)
         links {
             homepage(project.ext.url)
@@ -44,7 +48,7 @@ repositories {
 
 dependencies {
     api project(':skychanger-core')
-    implementation 'org.bstats:bstats-sponge:2.2.1'
+    implementation 'org.bstats:bstats-sponge:3.0.0'
 }
 
 shadowJar {
