--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,17 +4,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
           java-version: '8'
-          distribution: 'adopt'
+          distribution: 'temurin'
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
       - run: ./gradlew build
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: Package
           path: |
-            **/SkyChanger-Bukkit/build/libs
-            **/SkyChanger-Sponge/build/libs
+            **/skychanger-bukkit/build/libs
+            **/skychanger-sponge/build/libs
